2008-09-08  Martin Rudalics  <rudalics@gmx.at>

	* help-fns.el (describe-function-1): Don't print extra newline
	after filling.

2008-09-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* help-fns.el (find-lisp-object-file-name): Handle case where
	library is compressed.

2008-09-07  Chong Yidong  <cyd@stupidchicken.com>

	* complete.el (PC-do-completion): Don't replace buffer
	contents (bug#227).

2008-09-05  Juanma Barranquero  <lekktu@gmail.com>

	* loadhist.el (unload-feature-special-hooks):
	Add `choose-completion-string-functions'.

2008-09-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-svn.el (vc-svn-root):
	* vc-sccs.el (vc-sccs-root):
	* vc-rcs.el (vc-rcs-root):
	* vc-cvs.el (vc-cvs-root): Delete.
	* vc-hooks.el (vc-find-root): Remove `invert' argument.

2008-09-07  Nikolaj Schumacher  <n_schumacher@web.de>  (tiny change)

	* progmodes/flymake.el (flymake-parse-err-lines): Filter out
	errors occurring in different files.

2008-09-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-extra-fileinfo): New defstruct.
	(vc-bzr-status-printer): New function.
	(vc-bzr-after-dir-status): Deal with renamed files.

2008-09-07  Johan Euphrosine  <proppy@aminche.com>  (tiny change)

	* ibuf-ext.el (ibuffer-diff-buffer-with-file-1): Shell quote
	buffer's filename.

2008-09-07  Martin Rudalics  <rudalics@gmx.at>

	* subr.el (cancel-change-group): Widen buffer temporarily when
	undoing changes.  (Bug#810)

2008-09-07  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-stop-subjob): Using jdb, suspend threads
	with gud-stop-subjob rather than exit debugger.

2008-09-06  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el: Require time-date.
	(proced-command-alist, proced-command, proced-goal-header-re)
	(proced-sorting-schemes-alist, proced-sorting-scheme)
	(proced-header-alist, proced-sorting-schemes-re)
	(proced-skip-regexp, proced-next-line, proced-previous-line)
	(proced-listing-type, proced-sorting-scheme-p): Remove.